# web-image-scraper

./: README.md  app.py  main.py  pyproject.toml  replit.nix  requirements.txt  scraper.py
static/css/: custom.css
static/js/: main.js
templates/: index.html
